add autocommand to ensure certain lsps are always installed

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -12,8 +12,8 @@ set -g history-limit 50000
 set -g display-time 4000
 
 # statusline configuration
-set -g status-position top
-set -g status-style bg=black,fg=white
+set -g status-position bottom
+set -g status-style bg=green,fg=black
 
 bind -N "Send prefix to shell" C-a send-prefix
 
