--- a/code/settings.json
+++ b/code/settings.json
@@ -1,6 +1,6 @@
 {
   "workbench.colorTheme": "Kanagawa",
-  "editor.fontFamily": "TX-02",
+  "editor.fontFamily": "Monaspace Neon, TX-02",
   "editor.fontWeight": "500",
   "editor.fontLigatures": true,
   "editor.fontSize": 14,
