[2025-07-02_10:00] updating vscode extensions list

--- a/code/settings.json
+++ b/code/settings.json
@@ -199,5 +199,6 @@
   "workbench.navigationControl.enabled": false,
   "window.commandCenter": false,
   "window.menuBarVisibility": "compact",
-  "diffEditor.ignoreTrimWhitespace": true
+  "diffEditor.ignoreTrimWhitespace": true,
+  "git.openRepositoryInParentFolders": "never"
 }
