--- a/code/settings.json
+++ b/code/settings.json
@@ -199,6 +199,6 @@
   "workbench.navigationControl.enabled": false,
   "window.commandCenter": false,
   "window.menuBarVisibility": "compact",
-  "diffEditor.ignoreTrimWhitespace": true,
+  "diffEditor.ignoreTrimWhitespace": false,
   "git.openRepositoryInParentFolders": "never"
 }
