[2025-08-21_10:27] updating vscode extensions list

--- a/code/settings.json
+++ b/code/settings.json
@@ -200,5 +200,6 @@
   "window.commandCenter": false,
   "window.menuBarVisibility": "compact",
   "diffEditor.ignoreTrimWhitespace": false,
-  "git.openRepositoryInParentFolders": "never"
+  "git.openRepositoryInParentFolders": "never",
+  "workbench.secondarySideBar.defaultVisibility": "hidden"
 }
