start configuring hyprland

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -3,3 +3,25 @@ env = __GLX_VENDOR_LIBRARY_NAME,nvidia
 
 $terminal = alacritty
 $fileManager = dolphin
+
+bind = SUPER, X, killactive
+bind = SUPER, Return, exec, alacritty
+# vim-like motion to move between windows
+bind = SUPER, h, movefocus, l
+bind = SUPER, l, movefocus, r
+bind = SUPER, j, movefocus, d
+bind = SUPER, k, movefocus, u
+# move window in the specific direction
+bind = SUPER ALT, h, movewindow, l
+bind = SUPER ALT, l, movewindow, r
+bind = SUPER ALT, j, movewindow, d
+bind = SUPER ALT, k, movewindow, u
+
+input {
+	# map caps lock to ESC
+	kb_options = caps:escape
+	# how fast a held down key is repeated
+	repeat_rate = 40
+	# how long in ms it takes for it to start repeating
+	repeat_delay = 200
+}
