configure hyprland a bit more

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -4,8 +4,10 @@ env = __GLX_VENDOR_LIBRARY_NAME,nvidia
 $terminal = alacritty
 $fileManager = dolphin
 
+# kill current window
 bind = SUPER, X, killactive
-bind = SUPER, Return, exec, alacritty
+# open new terminal
+bind = SUPER, Return, exec, $terminal
 # vim-like motion to move between windows
 bind = SUPER, h, movefocus, l
 bind = SUPER, l, movefocus, r
@@ -16,6 +18,34 @@ bind = SUPER ALT, h, movewindow, l
 bind = SUPER ALT, l, movewindow, r
 bind = SUPER ALT, j, movewindow, d
 bind = SUPER ALT, k, movewindow, u
+# go to workspace n
+bind = SUPER, 1, workspace, 1
+bind = SUPER, 2, workspace, 2
+bind = SUPER, 3, workspace, 3
+bind = SUPER, 4, workspace, 4
+bind = SUPER, 5, workspace, 5
+bind = SUPER, 6, workspace, 6
+bind = SUPER, 7, workspace, 7
+bind = SUPER, 8, workspace, 8
+bind = SUPER, 9, workspace, 9
+# move focused window to workspace n
+bind = SUPER_SHIFT, 1, workspace, 1
+bind = SUPER_SHIFT, 2, workspace, 2
+bind = SUPER_SHIFT, 3, workspace, 3
+bind = SUPER_SHIFT, 4, workspace, 4
+bind = SUPER_SHIFT, 5, workspace, 5
+bind = SUPER_SHIFT, 6, workspace, 6
+bind = SUPER_SHIFT, 7, workspace, 7
+bind = SUPER_SHIFT, 8, workspace, 8
+bind = SUPER_SHIFT, 9, workspace, 9
+
+# resize mode submap
+bind = SUPER, R, submap, resize
+submap = resize
+binde = , l, resizeactive, 10 0
+binde = , h, resizeactive, -10 0
+bind = , escape, submap, reset
+submap = reset
 
 input {
 	# map caps lock to ESC
