[2025-09-19_07:01] updating packages list

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -29,20 +29,28 @@ bind = SUPER, 7, workspace, 7
 bind = SUPER, 8, workspace, 8
 bind = SUPER, 9, workspace, 9
 # move focused window to workspace n
-bind = SUPER_SHIFT, 1, workspace, 1
-bind = SUPER_SHIFT, 2, workspace, 2
-bind = SUPER_SHIFT, 3, workspace, 3
-bind = SUPER_SHIFT, 4, workspace, 4
-bind = SUPER_SHIFT, 5, workspace, 5
-bind = SUPER_SHIFT, 6, workspace, 6
-bind = SUPER_SHIFT, 7, workspace, 7
-bind = SUPER_SHIFT, 8, workspace, 8
-bind = SUPER_SHIFT, 9, workspace, 9
+bind = SUPER SHIFT, 1, movetoworkspace, 1
+bind = SUPER SHIFT, 2, movetoworkspace, 2
+bind = SUPER SHIFT, 3, movetoworkspace, 3
+bind = SUPER SHIFT, 4, movetoworkspace, 4
+bind = SUPER SHIFT, 5, movetoworkspace, 5
+bind = SUPER SHIFT, 6, movetoworkspace, 6
+bind = SUPER SHIFT, 7, movetoworkspace, 7
+bind = SUPER SHIFT, 8, movetoworkspace, 8
+bind = SUPER SHIFT, 9, movetoworkspace, 9
+# cycle through workspaces
+bind = SUPER, TAB, workspace, +1
+bind = SUPER SHIFT, TAB, workspace, -1
+
+# toggle fullscreen for current window
+bind = SUPER, F, fullscreen
 
 # resize mode submap
 bind = SUPER, R, submap, resize
 submap = resize
 binde = , l, resizeactive, 10 0
+binde = , j, resizeactive, 0 10
+binde = , k, resizeactive, 0 -10
 binde = , h, resizeactive, -10 0
 bind = , escape, submap, reset
 submap = reset
